# accel

./: .gitignore  LICENSE  Pipfile  README.md  accel.nix  default.nix  notes.md  setup.py  shell.nix  src.nix
.github/workflows/: test.yaml
accel/: __init__.py  __main__.py  __version__.py  cli.py  conf.py  conversion.py  doku.py  epub.py  gif.py  host.py  html.py  make.py  mp3.py  mp4.py  pdf.py  png.py  scrape.py  sunnyside.py  svg.py  zip.py
accel/conv/: TMP_pandoc_book.py  TMP_plato_book.py  TMP_reddit_book.py  epub_builders.py  epub_from_url.py
accel/core/: cli.py  conversion.py
accel/math/: geometry.nix  geometry.py  least_squares.py  linear_programs.py  optimize.py  pyceres.nix  quadratic_programs.py
accel/math/geometry-src/: CMakeLists.txt  python_module.cpp
accel/math/pyceres-src/: AddToCeres.cmake  ceres-build.patch  custom_cpp_cost_functions.cpp  python_module.cpp
accel/utils/: img_process.py  inputs.py  string_parsing.py
scripts/: make_manifest.py
tests/: FIXME_pose_graph_slam.py  FIXME_rotation_averaging.py  __init__.py  conftest.py  test_math_geometry.py  test_math_linear_programs.py  test_utils.py  test_utils_string_parsing.py
